fixed z-index on footer again

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@
 	width: 100%;
 	position: fixed;
 	bottom: 0;
-	z-index: 1;
+	z-index: 9999;
 }
 
 li {
